# near-safe-cell

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md
.github/workflows/: build.yml  coverage.yml  test.yml
src/: lib.rs  test_utilities.rs
