[package]
name = "near-safe-cell"
version = "0.1.5"
edition = "2018"

description = "A more ergonomic 'UnsafeCell' wrapper/replacement."
keywords = ["cell", "unsafecell", "interior-mutability"]
categories = ["rust-patterns", "no-std"]

authors = ["Wulf0x67E7 (@https://github.com/Wulf0x67E7)"]
repository = "https://github.com/Wulf0x67E7/near-safe-cell"
license = "MIT OR Apache-2.0"